# mot

./: CMakeLists.txt  Makefile  ions.py  iosc.py  oldscans.py  optimize.py  scans.py  setup.py  solenoid_scans.py  spacecharge.py
mot/: __init__.py  analysis.py  mot.py  output.py  parallel.py  scan2d.py
simulations/compressed/: run.py
simulations/scan6/: scan6.py
simulations/uncompressed/: run.py
src/: sample.cxx
